GrafanaPromethues/prometheusIngress.yaml
apiVersion: v1
kind: Service
metadata:
  name: prometheus-nodeport
  namespace: prometheus
spec:
  selector:
    app: prometheus
  ports:
  - name: prometheus-svc
    port: 9090
    targetPort: 9090
    protocol: TCP
    nodePort: 30000 # You can choose any available port on your nodes
  type: NodePort
