GrafanaPromethues/grafana-ing.yaml
apiVersion: networking.k8s.io/v1
kind: Ingress
metadata:
  namespace: grafana
  name: grafana-ingress
  annotations:
    alb.ingress.kubernetes.io/scheme: internet-facing
    alb.ingress.kubernetes.io/target-type: ip
spec:
  ingressClassName: alb
  rules:
  - http:
      paths:
      - path: /
        pathType: Prefix
        backend:
          service:
            name: grafana
            port:
              number: 3000
